# llamaindex_rag

./: .env.bedrock_endpoint.example  .env.custom-llm.example  .env.example  .env.local.example  .env.production.example  .gitignore  4_TIER_REFACTOR_SUMMARY.md  APPLICATION_GUIDE.md  ARCHITECTURE.md  BEDROCK_ENDPOINT_INTEGRATION.md  CLEANUP_ANALYSIS_REPORT.md  CLEANUP_SUMMARY.md  COLUMN_METADATA_SCRIPT_EXAMPLES.md  CONTRIBUTING.md  DDL_SCRIPT_FIXES.md  DEMO_GUIDE.md  DEPLOYMENT.md  Dockerfile  FINAL_CLEANUP_SUMMARY.md  HIERARCHICAL_MIGRATION_INSTRUCTIONS.md  LICENSE  METADATA_GRAPH_ARCHITECTURE.md  METADATA_MANAGEMENT.md  METADATA_PREPARATION_CHECKLIST.md  Makefile  QUICK_START.md  README.md  REPLACE_MOCK_DATA_GUIDE.md  SETUP_GUIDE.md  SYSTEM_STATUS.md  TESTING_GUIDE.md  WORKFLOW_EXAMPLES.md  chat_interface.py  config.yaml  debug_vector_store.py  demo_full_flow.py  docker-compose.full.yml  docker-compose.yml  main_schema_metadata_template.json  pyproject.toml  (+20 more)
.claude/: settings.local.json
aws/: lambda_function.py
meta_documents/: README.md  business_domains.json  view_metadata.json
scripts/: create_opensearch_index.py  discover_and_migrate_metadata.py  extract_ddl_statements.py  load_sample_data.py  migrate_view_metadata.py  process_business_domains.py  process_reports.py  process_view_metadata.py  reindex_metadata.py  restructure_column_metadata.py  seed_mock_data.py  setup_for_testing.py  test_discover_script.py  test_metadata_hierarchy.py  test_mongodb_connection.py  test_mongodb_document_sync.py
tests/: README.md  conftest.py  run_all_connection_tests.py  run_system_tests.py  run_tests.py  test_bedrock_embedding.py  test_bedrock_llm.py  test_document_storage.py  (+5 more)
(+70 files in other folders)
